--- a/src/pages/comentarios/comentarios.html
+++ b/src/pages/comentarios/comentarios.html
@@ -1,109 +1,147 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../../base.css" />
+    <link rel="stylesheet" href="./comentarios.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="../../reset.css" />
-  <link rel="stylesheet" href="../../base.css" />
-  <link rel="stylesheet" href="./comentarios.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-    rel="stylesheet" />
+    <title>Comentários</title>
+  </head>
 
-  <title>Comentários</title>
-</head>
-
-<body>
-  <nav class="left-navbar">
-    <div class="logo-nav">
-      <img src="../../assets/white_icon.svg" alt="sos-logo">
-      <h4>WEB</h4>
-    </div>
-    <div class="nav-options">
-      <div class="home-nav">
-        <a href="../denuncias/denuncias.html">
-          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-        </a>
-        <p>Denúncias</p>
+  <body>
+    <nav class="left-navbar">
+      <div class="logo-nav">
+        <img src="../../assets/white_icon.svg" alt="sos-logo" />
+        <h4>WEB</h4>
       </div>
-      <div class="user-denunciations-nav">
-        <a href="../minhas-denuncias/minhas-denuncias.html">
-          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations">
-        </a>
-        <p>Minhas denúncias</p>
+      <div class="nav-options">
+        <div class="home-nav">
+          <a href="../denuncias/denuncias.html">
+            <img
+              id="home-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-home.svg"
+              alt="home"
+            />
+          </a>
+          <p>Denúncias</p>
+        </div>
+        <div class="user-denunciations-nav">
+          <a>
+            <img
+              id="denunciations-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-tasklist.svg"
+              alt="denunciations"
+            />
+          </a>
+          <p id="acao-user-denunciations-nav"></p>
+        </div>
+        <div class="logout-nav">
+          <a onclick="desloga()">
+            <img
+              id="logout-icon"
+              class="left-nav-icon"
+              src="../../assets/exit.svg"
+              alt="logout"
+            />
+          </a>
+          <p>Sair</p>
+        </div>
       </div>
-      <div class="logout-nav">
-        <a href="../login/login.html">
-          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout">
-        </a>
-        <p>Sair</p>
+    </nav>
+    <div class="app">
+      <div class="top-navbar">
+        <p>Lorem ipsum</p>
+        <img src="../../assets/user.svg" alt="user" />
       </div>
-    </div>
-  </nav>
-  <div class="app">
-    <div class="top-navbar">
-      <p>Lorem ipsum</p>
-      <img src="../../assets/user.svg" alt="user">
-    </div>
-    <div class="app-container">
-      <div class="card-app">
-        <div class="comments">
-          <header>
-            <div class="modal-header">
-              <h1> Aloha </h1>
-              <div class="option-header">
-                <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
+      <div class="app-container">
+        <div class="card-app">
+          <div class="comments">
+            <header>
+              <div class="modal-header">
+                <h1>Aloha</h1>
+                <div class="option-header">
+                  <img
+                    class="tree-dots-option"
+                    src="../../assets/tree-dots.svg"
+                    alt="logout"
+                  />
+                </div>
               </div>
-            </div>
-            <div class="modal-content">
-              <p class="content-warning"> Malicioso </p>
-              <br />
-              <p class="content-link">www.aloha.com.br</p>
-              <br />
-              Esse site de compras possui muitos comentários e avaliações de golpes
-              e aparentemente a plataforma não pune os estelionatários.
-            </div>
-          </header>
-          <main>
-            <div class="add-comment">
-              <a href="../adicionar-comentarios/adicionar-comentarios.html">
-                <p>Escrever comentário > </p>
+              <div class="modal-content">
+                <p class="content-warning">Malicioso</p>
+                <br />
+                <p class="content-link">www.aloha.com.br</p>
+                <br />
+                Esse site de compras possui muitos comentários e avaliações de
+                golpes e aparentemente a plataforma não pune os estelionatários.
+              </div>
+            </header>
+            <main>
+              <div class="add-comment">
+                <a href="../adicionar-comentarios/adicionar-comentarios.html">
+                  <p>Escrever comentário ></p>
+                </a>
+              </div>
+              <div class="user-comment">
+                <img
+                  class="user-image"
+                  src="../../assets/user.svg"
+                  alt="user"
+                />
+                <div class="comment-container">
+                  <p>
+                    Tive uma experiência muito de sagradável, levei um golpe e
+                    não cheguei a ser ressarcido e a loja continua vendendo e
+                    aplicando golpes.
+                  </p>
+                </div>
+              </div>
+              <div class="user-comment">
+                <img
+                  class="user-image"
+                  src="../../assets/user.svg"
+                  alt="user"
+                />
+                <div class="comment-container">
+                  <p>
+                    Muito ruim, o site parece umamáfia, produtos muito baratose
+                    anúncios fora da realidade,parece ser tudo uma farsa!
+                  </p>
+                </div>
+              </div>
+            </main>
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../../assets/icon-user.svg" alt="icon" />
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img
+                  id="home-icon"
+                  class="left-nav-icon"
+                  src="../../assets/icon-home.svg"
+                  alt="home"
+                />
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../../assets/icon-tasklist.svg" alt="icon" />
               </a>
             </div>
-            <div class="user-comment">
-              <img class="user-image" src="../../assets/user.svg" alt="user">
-              <div class="comment-container">
-                <p>Tive uma experiência muito de
-                  sagradável, levei um golpe e não cheguei a ser ressarcido e a loja continua vendendo e aplicando
-                  golpes.</p>
-              </div>
-            </div>
-            <div class="user-comment">
-              <img class="user-image" src="../../assets/user.svg" alt="user">
-              <div class="comment-container">
-                <p>Muito ruim, o site parece umamáfia, produtos muito baratose anúncios fora da realidade,parece ser
-                  tudo uma farsa!</p>
-              </div>
-            </div>
-          </main>
-          <div class="menu-bar">
-            <a href="../usuario/usuario.html">
-              <img src="../../assets/icon-user.svg" alt="icon">
-            </a>
-            <a href="../denuncias/denuncias.html">
-              <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-            </a>
-            <a href="../minhas-denuncias/minhas-denuncias.html">
-              <img src="../../assets/icon-tasklist.svg" alt="icon">
-            </a>
           </div>
         </div>
       </div>
     </div>
-  </div>
-</body>
-
+    <script src="../../DOMUtils.js"></script>
+    <script src="../../main.js"></script>
+  </body>
 </html>
