--- a/src/pages/denuncia-modal/denuncia-modal.html
+++ b/src/pages/denuncia-modal/denuncia-modal.html
@@ -1,183 +1,313 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../../base.css" />
+    <link rel="stylesheet" href="./denuncia-modal.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="stylesheet" href="../../reset.css" />
-  <link rel="stylesheet" href="../../base.css" />
-  <link rel="stylesheet" href="./denuncia-modal.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-    rel="stylesheet" />
+    <title>Denúncias modal - SOS Web</title>
+  </head>
 
-  <title>Denúncias modal - SOS Web</title>
-</head>
-
-<body>
-  <!-- DESKTOP -->
-  <nav class="left-navbar">
-    <div class="logo-nav">
-      <img src="../../assets/white_icon.svg" alt="sos-logo">
-      <h4>WEB</h4>
-    </div>
-    <div class="nav-options">
-      <div class="home-nav">
-        <a href="../denuncias/denuncias.html">
-          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-        </a>
-        <p>Denúncias</p>
+  <body>
+    <!-- DESKTOP -->
+    <nav class="left-navbar">
+      <div class="logo-nav">
+        <img src="../../assets/white_icon.svg" alt="sos-logo" />
+        <h4>WEB</h4>
       </div>
-      <div class="user-denunciations-nav">
-        <a href="../minhas-denuncias/minhas-denuncias.html">
-          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations">
-        </a>
-        <p>Minhas denúncias</p>
+      <div class="nav-options">
+        <div class="home-nav">
+          <a href="../denuncias/denuncias.html">
+            <img
+              id="home-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-home.svg"
+              alt="home"
+            />
+          </a>
+          <p>Denúncias</p>
+        </div>
+        <div class="user-denunciations-nav">
+          <a>
+            <img
+              id="denunciations-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-tasklist.svg"
+              alt="denunciations"
+            />
+          </a>
+          <p id="acao-user-denunciations-nav"></p>
+        </div>
+        <div class="logout-nav">
+          <a onclick="desloga()">
+            <img
+              id="logout-icon"
+              class="left-nav-icon"
+              src="../../assets/exit.svg"
+              alt="logout"
+            />
+          </a>
+          <p>Sair</p>
+        </div>
       </div>
-      <div class="logout-nav">
-        <a href="../login/login.html">
-          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout">
+    </nav>
+    <div class="app">
+      <header class="top-navbar">
+        <p>Lorem ipsum</p>
+        <a href="../usuario/usuario.html">
+          <img src="../../assets/user.svg" alt="user" />
         </a>
-        <p>Sair</p>
-      </div>
-    </div>
-  </nav>
-  <div class="app">
-    <header class="top-navbar">
-      <p>Lorem ipsum</p>
-      <a href="../usuario/usuario.html">
-        <img src="../../assets/user.svg" alt="user">
-      </a>
-    </header>
-    <div class="app-container">
-      <div class="card-app">
-        <div class="denunciations">
-          <header>
-            <div class="option-header">
-              <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
-            </div>
-            <h1>Denúncias</h1>
-            <div class="form-search">
-              <p>Pesquisa</p>
-              <form name="form-search" class="form-search" method="POST">
-                <input type="search" class="input-base" name="search" placeholder="Pesquisa" />
-                <div class="button-search">
-                  <img class="img-search" src="../../assets/icon-search.svg" alt="Search" />
+      </header>
+      <div class="app-container">
+        <div class="card-app">
+          <div class="denunciations">
+            <header>
+              <div class="option-header">
+                <img
+                  class="tree-dots-option"
+                  src="../../assets/tree-dots.svg"
+                  alt="logout"
+                />
+              </div>
+              <h1>Denúncias</h1>
+              <div class="form-search">
+                <p>Pesquisa</p>
+                <form name="form-search" class="form-search" method="POST">
+                  <input
+                    type="search"
+                    class="input-base"
+                    name="search"
+                    placeholder="Pesquisa"
+                  />
+                  <div class="button-search">
+                    <img
+                      class="img-search"
+                      src="../../assets/icon-search.svg"
+                      alt="Search"
+                    />
+                  </div>
+                </form>
+              </div>
+              <div class="filters">
+                <p>Filtros</p>
+                <button class="button-base">Alta</button>
+                <button class="button-base">Média</button>
+                <button class="button-base">Baixa</button>
+              </div>
+            </header>
+            <div class="modal-overlay">
+              <div class="modal-container">
+                <a
+                  class="close-modal"
+                  type="button"
+                  href="../denuncias/denuncias.html"
+                >
+                  <p class="btn-close-modal">x</p>
+                </a>
+                <div class="modal-header">
+                  <h1>Aloha</h1>
+                  <a href="../comentarios/comentarios.html">
+                    <img
+                      style="padding-right: 1.5rem"
+                      src="../../assets/arrow-right.svg"
+                      alt="Comentários"
+                    />
+                  </a>
                 </div>
-              </form>
+                <div class="modal-content">
+                  <p class="content-warning">Malicioso</p>
+                  <br />
+                  <p class="content-link">www.aloha.com.br</p>
+                  <br />
+                  Esse site de compras possui muitos comentários e avaliações de
+                  golpes e aparentemente a plataforma não pune os
+                  estelionatários.
+                </div>
+              </div>
             </div>
-            <div class="filters">
-              <p>Filtros</p>
-              <button class="button-base">Alta</button>
-              <button class="button-base">Média</button>
-              <button class="button-base">Baixa</button>
-            </div>
-          </header>
-          <div class="modal-overlay">
-            <div class="modal-container">
-              <a class="close-modal" type="button" href="../denuncias/denuncias.html">
-                <p class="btn-close-modal">x</p>
-              </a>
-              <div class="modal-header">
-                <h1> Aloha </h1>
-                <a href="../comentarios/comentarios.html">
-                  <img style="padding-right: 1.5rem;" src="../../assets/arrow-right.svg" alt="Comentários" />
+
+            <main>
+              <table style="overflow-x: auto">
+                <tr class="table-header">
+                  <th>Site/E-mail</th>
+                  <th>Nome</th>
+                  <th>Nocividade</th>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      ><span>Baixa</span></a
+                    >
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Média</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Alta</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Alta</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Alta</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Média</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Alta</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Média</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Baixa</a>
+                  </td>
+                </tr>
+                <tr>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html"
+                      >www.aloha.com.br</a
+                    >
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Aloha</a>
+                  </td>
+                  <td>
+                    <a href="../denuncia-modal/denuncia-modal.html">Alta</a>
+                  </td>
+                </tr>
+              </table>
+              <div class="table-footer">
+                <p>Total de registros: 10</p>
+                <div class="pagination">
+                  <p>Página 1 de 143</p>
+                  <img
+                    class="next-pagination"
+                    src="../../assets/chevron-right.svg"
+                    alt="next-pagination"
+                  />
+                </div>
+              </div>
+              <div class="menu-bar">
+                <a href="../usuario/usuario.html">
+                  <img src="../../assets/icon-user.svg" alt="icon" />
+                </a>
+                <a href="../denuncias/denuncias.html">
+                  <img
+                    id="home-icon"
+                    class="left-nav-icon"
+                    src="../../assets/icon-home.svg"
+                    alt="home"
+                  />
+                </a>
+                <a href="../minhas-denuncias/minhas-denuncias.html">
+                  <img src="../../assets/icon-tasklist.svg" alt="icon" />
                 </a>
               </div>
-              <div class="modal-content">
-                <p class="content-warning"> Malicioso </p>
-                <br />
-                <p class="content-link">www.aloha.com.br</p>
-                <br />
-                Esse site de compras possui muitos comentários e avaliações de golpes
-                e aparentemente a plataforma não pune os estelionatários.
-              </div>
-            </div>
+            </main>
           </div>
-
-          <main>
-            <table style="overflow-x: auto">
-              <tr class="table-header">
-                <th>Site/E-mail</th>
-                <th>Nome</th>
-                <th>Nocividade</th>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html"><span>Baixa</span></a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Média</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Baixa</a></td>
-              </tr>
-              <tr>
-                <td><a href="../denuncia-modal/denuncia-modal.html">www.aloha.com.br</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Aloha</a></td>
-                <td><a href="../denuncia-modal/denuncia-modal.html">Alta</a></td>
-              </tr>
-            </table>
-            <div class="table-footer">
-              <p>Total de registros: 10</p>
-              <div class="pagination">
-                <p>Página 1 de 143</p>
-                <img class="next-pagination" src="../../assets/chevron-right.svg" alt="next-pagination">
-              </div>
-            </div>
-            <div class="menu-bar">
-              <a href="../usuario/usuario.html">
-                <img src="../../assets/icon-user.svg" alt="icon">
-              </a>
-              <a href="../denuncias/denuncias.html">
-                <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-              </a>
-              <a href="../minhas-denuncias/minhas-denuncias.html">
-                <img src="../../assets/icon-tasklist.svg" alt="icon">
-              </a>
-            </div>
-          </main>
         </div>
       </div>
     </div>
-  </div>
-</body>
-
+    <script src="../../DOMUtils.js"></script>
+    <script src="../../main.js"></script>
+  </body>
 </html>
