--- a/src/pages/minhas-denuncias/minhas-denuncias.html
+++ b/src/pages/minhas-denuncias/minhas-denuncias.html
@@ -1,67 +1,86 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../reset.css" />
+    <link rel="stylesheet" href="../../base.css" />
+    <link rel="stylesheet" href="./minhas-denuncias.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <link href="https://css.gg/trash.css" rel="stylesheet" />
+    <link href="https://css.gg/add.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="../../reset.css" />
-  <link rel="stylesheet" href="../../base.css" />
-  <link rel="stylesheet" href="./minhas-denuncias.css" />
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Roboto&display=swap"
-    rel="stylesheet" />
-  <link href='https://css.gg/trash.css' rel='stylesheet'>
-  <link href='https://css.gg/add.css' rel='stylesheet'>
-  <script src="minhas-denuncias.js" defer></script>
+    <title>Minhas denúncias - SOS WEB</title>
+  </head>
 
-  <title>Minhas denúncias - SOS WEB</title>
-</head>
-
-<body>
-  <nav class="left-navbar">
-    <div class="logo-nav">
-      <img src="../../assets/white_icon.svg" alt="sos-logo">
-      <h4>WEB</h4>
-    </div>
-    <div class="nav-options">
-      <div class="home-nav">
-        <a href="../denuncias/denuncias.html">
-          <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-        </a>
-        <p>Denúncias</p>
+  <body>
+    <nav class="left-navbar">
+      <div class="logo-nav">
+        <img src="../../assets/white_icon.svg" alt="sos-logo" />
+        <h4>WEB</h4>
       </div>
-      <div class="user-denunciations-nav">
-        <a href="../minhas-denuncias/minhas-denuncias.html">
-          <img id="denunciations-icon" class="left-nav-icon" src="../../assets/icon-tasklist.svg" alt="denunciations">
-        </a>
-        <p>Minhas denúncias</p>
+      <div class="nav-options">
+        <div class="home-nav">
+          <a href="../denuncias/denuncias.html">
+            <img
+              id="home-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-home.svg"
+              alt="home"
+            />
+          </a>
+          <p>Denúncias</p>
+        </div>
+        <div class="user-denunciations-nav">
+          <a>
+            <img
+              id="denunciations-icon"
+              class="left-nav-icon"
+              src="../../assets/icon-tasklist.svg"
+              alt="denunciations"
+            />
+          </a>
+          <p id="acao-user-denunciations-nav"></p>
+        </div>
+        <div class="logout-nav">
+          <a onclick="desloga()">
+            <img
+              id="logout-icon"
+              class="left-nav-icon"
+              src="../../assets/exit.svg"
+              alt="logout"
+            />
+          </a>
+          <p>Sair</p>
+        </div>
       </div>
-      <div class="logout-nav">
-        <a href="../login/login.html">
-          <img id="logout-icon" class="left-nav-icon" src="../../assets/exit.svg" alt="logout">
+    </nav>
+    <div class="app">
+      <header class="top-navbar">
+        <p>Lorem ipsum</p>
+        <a href="../usuario/usuario.html">
+          <img src="../../assets/user.svg" alt="user" />
         </a>
-        <p>Sair</p>
-      </div>
-    </div>
-  </nav>
-  <div class="app">
-    <header class="top-navbar">
-      <p>Lorem ipsum</p>
-      <a href="../usuario/usuario.html">
-        <img src="../../assets/user.svg" alt="user">
-      </a>
-    </header>
-    <div class="app-container">
-      <div class="card-app">
-        <div class="denounce">
-          <div class="option-header">
-            <img class="tree-dots-option" src="../../assets/tree-dots.svg" alt="logout" />
-          </div>
-          <h1>Minhas Denúncias</h1>
-          <!-- Analyses-->
-          <!-- <div class="denounce-analyses" id="d-a">
+      </header>
+      <div class="app-container">
+        <div class="card-app">
+          <div class="denounce">
+            <div class="option-header">
+              <img
+                class="tree-dots-option"
+                src="../../assets/tree-dots.svg"
+                alt="logout"
+              />
+            </div>
+            <h1>Minhas Denúncias</h1>
+            <!-- Analyses-->
+            <!-- <div class="denounce-analyses" id="d-a">
             <div class="title-denounce-analyses">
               <h2>Spotlight</h2>
               <i onclick="myDelete()" style="margin-right: 10px;" class="gg-trash"></i>
@@ -84,30 +103,35 @@
               <h5>Muito Spam não me parece um site confíavel.</h5>
             </div>
           </div> -->
-          <!-- Botão +-->
-          <a class="add-button" href="../criar-denuncia/criar-denuncia.html">
-            <!-- trocar <button> por <a type="button"> -->
-            +
-          </a>
+            <!-- Botão +-->
+            <a class="add-button" href="../criar-denuncia/criar-denuncia.html">
+              <!-- trocar <button> por <a type="button"> -->
+              +
+            </a>
 
-          <!-- Barra Menu-->
-          <div class="menu-bar">
-            <a href="../usuario/usuario.html">
-              <img src="../../assets/icon-user.svg" alt="icon">
-            </a>
-            <a href="../denuncias/denuncias.html">
-              <img id="home-icon" class="left-nav-icon" src="../../assets/icon-home.svg" alt="home">
-            </a>
-            <a href="../minhas-denuncias/minhas-denuncias.html">
-              <img src="../../assets/icon-tasklist.svg" alt="icon">
-            </a>
+            <!-- Barra Menu-->
+            <div class="menu-bar">
+              <a href="../usuario/usuario.html">
+                <img src="../../assets/icon-user.svg" alt="icon" />
+              </a>
+              <a href="../denuncias/denuncias.html">
+                <img
+                  id="home-icon"
+                  class="left-nav-icon"
+                  src="../../assets/icon-home.svg"
+                  alt="home"
+                />
+              </a>
+              <a href="../minhas-denuncias/minhas-denuncias.html">
+                <img src="../../assets/icon-tasklist.svg" alt="icon" />
+              </a>
+            </div>
           </div>
         </div>
       </div>
     </div>
-  </div>
-
-
-</body>
-
+    <script src="../../DOMUtils.js"></script>
+    <script src="../../main.js"></script>
+    <script src="./minhas-denuncias.js"></script>
+  </body>
 </html>
